# azure-genai-backend-lab

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  behave.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_feedback.md
.github/workflows/: ci.yml  deploy-container-app.yml
docker/: Dockerfile
docs/: README.md  agent-decision-guide.md  api-conventions.md  api-management.md  architecture.md  azure-services-map.md  cost-and-monitoring.md  production-readiness-checklist.md  rag-overview.md  testing-strategy.md
docs/diagrams/: README.md  agent-tool-call-sequence.md  aoai-resource-hierarchy.md  chat-sequence.md  rag-query-sequence.md  rag-two-pipelines.md  reference-architecture.md  streaming-sequence.md
docs/openapi/: README.md  openapi.yaml
docs/state-models/: README.md  conversation-session-fsm.md  rag-indexing-job-fsm.md
docs/zh-tw/: README.md  glossary.md  ithome-series.md
examples/: README.md
examples/requests/: chat.http  health.http  rag.http
examples/sample-documents/: README.md
infra/: README.md
infra/apim/: genai-api-policy.xml
infra/bicep/: README.md  main.bicep
infra/scripts/: README.md  configure-apim.sh  create-budget-alert.sh  create-openai.sh  create-resource-group.sh  delete-apim.sh  delete-openai.sh  deploy-container-app.sh  teardown.sh
site/: README.md  package-lock.json  package.json
src/azgenai_lab/: __init__.py  main.py
tests/: conftest.py
tests/bdd/: environment.py
tests/unit/: test_chat_api.py  test_chat_incomplete.py  (+13 more)
tools/: export_openapi.py
(+43 files in other folders)
